FIX margin collapse en safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
 	background-repeat: no-repeat;
 }
 
+body * {
+	-webkit-margin-collapse: separate;
+}
+
 a {
 	text-decoration: none;
 }
